# claude-memory-mcp

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
config/: config.json
data/: memory.json
memory_mcp/: __main__.py
memory_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
memory_mcp/mcp/: memory_server.py
