[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory_mcp"
version = "0.1.0"
description = "MCP server implementation for LLM persistent memory"
readme = "README.md"
authors = [
    {name = "Aurora", email = "example@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.7.3,<3.0.0",
    "sentence-transformers>=2.7.0,<3.0.0",
    "numpy>=1.26.4,<2.0.0",
    "hnswlib>=0.8.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "python-jose>=3.3.0,<4.0.0",
    "loguru>=0.7.2,<0.8.0",
    "anyio>=3.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-cov>=4.1.0,<5.0.0",
    "black>=23.3.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.3.0,<2.0.0",
]

[tool.setuptools]
packages = ["memory_mcp"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true